# LMT

./: .gitignore  CELL_EDITING.md  FONT_SETUP.md  MANUAL.md  README.md  README_CPP.md  fx_commands.txt  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  freeverb.cpp  freeverb.h  main.cpp  master_fx.h
android/app/src/main/cpp/audio/: audio_engine.cpp  audio_engine.h  jni_bridge.cpp  stria_sola_stretcher.hpp
android/app/src/main/cpp/data/: chain.h  instrument.h  phrase.h  sample.h  song.h
android/app/src/main/cpp/renderer/: renderer.cpp  renderer.h
android/app/src/main/cpp/ui/: window_manager.cpp  window_manager.h
android/app/src/main/kotlin/com/example/lmt/: AudioEnginePlugin.kt  MainActivity.kt
android/app/src/main/kotlin/com/metamind/lmt/: AudioEnginePlugin.kt  MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/tracker/: fx_commands.dart  sample_browser.dart  tracker_model.dart  tracker_screen.dart  tracker_styles.dart
lib/tracker/audio/: audio_engine.dart  wav_encoder.dart
lib/tracker/models/: sampler_params.dart
lib/tracker/services/: project_manager.dart  storage_service.dart
lib/tracker/widgets/: waveform_painter.dart
lib/tracker/windows/: chain_window.dart  fx_window.dart  instrument_window.dart  manual_window.dart  mixer_window.dart  phrase_window.dart  sampler_window.dart  song_window.dart
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
web/: index.html
